--- a/package.json
+++ b/package.json
@@ -8,8 +8,32 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^2.19.0",
+    "@urql/exchange-graphcache": "^4.0.0",
+    "apollo-server-micro": "^2.21.2",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "lodash": "^4.17.21",
     "next": "10.0.9",
+    "next-auth": "^3.13.3",
+    "next-urql": "^3.0.0",
+    "nexus": "^1.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-intersection-observer": "^8.31.0",
+    "react-is": "^17.0.2",
+    "urql": "^2.0.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
+    "@types/next-auth": "^3.7.2",
+    "@types/node": "^14.14.36",
+    "@types/react": "^17.0.3",
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.8",
+    "prisma": "^2.19.0",
+    "tailwindcss": "^2.0.4",
+    "typescript": "^4.2.3"
   }
 }
